--- a/Atividade01/package.json
+++ b/Atividade01/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "hello": "node src/helloworld.js",
+    "helloUser": "node src/helloUser.js",
+    "sumArgs": "node src/SumArgs.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "moment": "^2.30.1"
   }
 }
